*SVN*

* Change the query parser to map empty GET params to "" rather than nil. Closes #5694. [Nicholas Seckar]

* date_select and datetime_select take a :default option.  #7052 [nik.wakelin]
    date_select "post", "written_on", :default => 3.days.from_now
    date_select "credit_card", "bill_due", :default => { :day => 20 }

* select :multiple => true suffixes the attribute name with [] unless already suffixed.  #6977 [nik.kakelin, ben, julik]

* Improve routes documentation.  #7095 [zackchandler]

* mail_to :encode => 'hex' also encodes the mailto: part of the href attribute as well as the linked email when no name is given.  #2061 [Jarkko Laine, pfc.pille@gmx.net]

* Resource member routes require :id, eliminating the ambiguous overlap with collection routes.  #7229 [dkubb]

* Remove deprecated assertions.  [Jeremy Kemper]

* Change session restoration to allow namespaced models to be autoloaded. Closes #6348. [Nicholas Seckar]

* Fix doubly appearing parameters due to string and symbol mixups. Closes #2551. [aeden]

* Fix overly greedy rescues when loading helpers. Fixes #6268. [Nicholas Seckar]

* Fixed NumberHelper#number_with_delimiter to use "." always for splitting the original number, not the delimiter parameter #7389 [ceefour]

* Autolinking recognizes trailing and embedded . , : ;  #7354 [Jarkko Laine]

* Make TextHelper::auto_link recognize URLs with colons in path correctly, fixes #7268.  [imajes]

* Update to script.aculo.us 1.7.0.  [Thomas Fuchs]

* Modernize cookie testing code, and increase coverage (Heckle++) #7101 [Kevin Clark]

* Improve Test Coverage for ActionController::Routing::Route#matches_controller_and_action? (Heckle++) #7115 [Kevin Clark]

* Heckling ActionController::Resources::Resource revealed that set_prefixes didn't break when :name_prefix was munged. #7081 [Kevin Clark]

* Fix #distance_of_time_in_words to report accurately against the Duration class.  #7114 [eventualbuddha]
